<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_patent"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_patent_wo_dots"
        android:textAlignment="center"
        android:textAppearance="@style/MLFont" />

    <TextView
        android:id="@+id/item_direction"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_address_wo_dots"
        android:textAlignment="center"
        android:textAppearance="@style/MLFont" />

    <TextView
        android:id="@+id/item_time"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_time_wo_dots"
        android:textAlignment="center"
        android:textAppearance="@style/MLFont" />


</LinearLayout>