<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/id_pasos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_step3of3countdown"
        android:textAlignment="center"
        android:textAppearance="@style/MLFont"
        android:textColor="@color/pacific_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/txt_time"
        android:textAppearance="@style/MLFont"
        app:layout_constraintBottom_toTopOf="@+id/text_view_countdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_initial_countdown"
        android:textAppearance="@style/MLFont"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/patent_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_res_show_matricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/txt_patent"
        android:textAppearance="@style/MLFont"
        app:layout_constraintBottom_toTopOf="@+id/title_direction"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/patent_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_underscore_string"
        android:textAppearance="@style/MLFont"
        app:layout_constraintBottom_toTopOf="@+id/txt_direction"
        app:layout_constraintStart_toEndOf="@+id/txt_res_show_matricula" />

    <TextView
        android:id="@+id/title_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/txt_location"
        android:textAppearance="@style/MLFont"
        app:layout_constraintBottom_toTopOf="@+id/finish_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_underscore_string"
        android:textAppearance="@style/MLFont"
        app:layout_constraintBottom_toTopOf="@+id/finish_btn"
        app:layout_constraintStart_toEndOf="@+id/title_direction" />

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="160dp"
        android:background="@color/pacific_blue"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_finish_parking"
        android:textAppearance="@style/MLFont"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>