<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ParkingAdvancedActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/pacific_blue"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_parking"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/txt_patent"
        android:textAppearance="@style/MLFont"
        android:textColorLink="@color/pacific_blue"
        app:layout_constraintBottom_toTopOf="@+id/txt_duracion"
        app:layout_constraintStart_toStartOf="parent" />

    <!--android:entries="@array/array_patentes"
        android:textAlignment="center"-->
    <Spinner
        android:id="@+id/spinner_patente"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_duracion"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width='match_parent'

        android:layout_height='wrap_content'

        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"

        android:layout_marginBottom="64dp"
        android:background="@color/pacific_blue"

        android:backgroundTint="@color/pacific_blue"
        android:backgroundTintMode="src_in"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_continue"
        android:textAlignment="center"
        android:textAppearance="@style/MLFont"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/load"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_duracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/txt_time"
        android:textAppearance="@style/MLFont"
        app:layout_constraintBottom_toTopOf="@+id/title_monto"
        app:layout_constraintStart_toStartOf="parent" />

    <!--android:entries="@array/array_tiempo"
    android:textAlignment="center"-->
    <Spinner
        android:id="@+id/spinner_duracion"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_monto"
        app:layout_constraintStart_toEndOf="@+id/txt_duracion" />

    <TextView
        android:id="@+id/title_monto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/txt_total_to_pay"
        android:textAppearance="@style/MLFont"
        app:layout_constraintBottom_toTopOf="@+id/title_direction"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_monto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_total_to_pay_with_sign"
        android:textAppearance="@style/MLFont"
        android:textColor="@color/gray20"
        app:layout_constraintBottom_toTopOf="@+id/dir"
        app:layout_constraintStart_toEndOf="@+id/title_monto" />

    <TextView
        android:id="@+id/title_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/txt_location"
        android:textAppearance="@style/MLFont"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/load"
        style="?android:attr/progressBarStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="1dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_localization"
        android:textAppearance="@style/MLFont"
        android:textColor="@color/gray20"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
        app:layout_constraintStart_toEndOf="@+id/title_direction" />

    <TextView
        android:id="@+id/id_pasos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:text="@string/txt_empty_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

</android.support.constraint.ConstraintLayout>