<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android='http://schemas.android.com/apk/res/android'
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools='http://schemas.android.com/tools'
    android:layout_width='match_parent'
    android:layout_height='match_parent'
    android:orientation='vertical'
    tools:context='.PaymentAdvancedActivity'>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mpsdkRegularLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/id_pasos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_step2of3countdown"
            android:textAlignment="center"
            android:textAppearance="@style/MLFont"
            android:textColor="@color/pacific_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_patent"
            android:textAppearance="@style/MLFont"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_duracion2" />

        <TextView
            android:id="@+id/txt_patente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_underscore_string"
            android:textAppearance="@style/MLFont"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/txt_tiempo" />

        <TextView
            android:id="@+id/txt_duracion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_time"
            android:textAppearance="@style/MLFont"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_pasos" />

        <TextView
            android:id="@+id/txt_tiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_underscore_string"
            android:textAppearance="@style/MLFont"
            app:layout_constraintStart_toEndOf="@+id/txt_duracion2"
            app:layout_constraintTop_toBottomOf="@+id/id_pasos" />

        <TextView
            android:id="@+id/title_monto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_total_to_pay"
            android:textAppearance="@style/MLFont"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_direction" />

        <TextView
            android:id="@+id/txt_monto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_underscore_string"
            android:textAppearance="@style/MLFont"
            app:layout_constraintStart_toEndOf="@+id/title_monto"
            app:layout_constraintTop_toBottomOf="@+id/txt_direction" />

        <TextView
            android:id="@+id/title_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_location"
            android:textAppearance="@style/MLFont"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/txt_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_underscore_string"
            android:textAppearance="@style/MLFont"
            app:layout_constraintStart_toEndOf="@+id/title_direction"
            app:layout_constraintTop_toBottomOf="@+id/txt_patente" />

        <Button
            android:id="@+id/sumit_btn"
            android:layout_width='match_parent'

            android:layout_height='wrap_content'

            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"

            android:layout_marginBottom="160dp"

            android:background="@color/pacific_blue"
            android:fontFamily="@font/roboto"
            android:text="@string/btn_continue_payment"
            android:textAppearance="@style/MLFont"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width='wrap_content'

            android:layout_height='wrap_content'
            android:layout_marginStart="64dp"

            android:layout_marginEnd="64dp"
            android:layout_marginBottom="64dp"
            android:background="@color/transparent"

            android:fontFamily="@font/roboto"

            android:text="@string/btn_cancel_operation"
            android:textAlignment="center"
            android:textAppearance="@style/MLFont"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>